Add prod build script

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "scripts": {
         "build": "node script/build",
+        "build-prod": "cross-env BUILD_ENV=production NODE_ENV=production node script/build",
         "watch": "node script/watch",
         "start": "electron dist/",
         "lint": "eslint .",
