--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "electron": "^11.1.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "react-router-dom": "^5.2.0"
+        "react-router-dom": "^5.2.0",
+        "three": "^0.125.2"
     }
 }
