--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,11 @@
         "outDir": "./dist/",
         "noImplicitAny": true,
         "module": "ES2020",
-        "target": "es3",
+        "target": "es6",
         "jsx": "react",
         "allowJs": true,
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true
     },
+    "include": ["./src/**/*.ts", "./src/**/*.tsx"]
 }
