--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-router-dom": "^5.2.0",
-        "three": "^0.125.2"
+        "three": "^0.125.2",
+        "three.meshline": "^1.3.0"
     }
 }
