--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
         "webpack-node-externals": "^2.5.2"
     },
     "dependencies": {
+        "chart.js": "^3.3.1",
         "electron": "^11.1.1",
         "ml-conrec": "^3.2.0",
         "react": "^17.0.1",
+        "react-chartjs-2": "^3.0.3",
         "react-dom": "^17.0.1",
         "react-router-dom": "^5.2.0",
         "three": "^0.125.2",
