--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "chart.js": "^3.3.1",
         "electron": "^11.1.1",
         "ml-conrec": "^3.2.0",
+        "ml-matrix": "^6.8.0",
         "react": "^17.0.1",
         "react-chartjs-2": "^3.0.3",
         "react-dom": "^17.0.1",
